--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react": "^17.0.2",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.13.0",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "webpack": "^5.61.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -46,7 +47,6 @@
     "html-webpack-plugin": "^5.5.0",
     "path": "^0.12.7",
     "rimraf": "^3.0.2",
-    "webpack": "^5.61.0",
     "webpack-dev-middleware": "^5.2.1",
     "webpack-hot-middleware": "^2.25.1"
   }
