--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Stock Market Predictions",
   "main": "scripts/start.js",
   "engines": {
-    "node": "14.16.1"
+    "node": "14.x"
   },
   "repository": {
     "type": "git"
@@ -33,6 +33,7 @@
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.13.0",
     "regenerator-runtime": "^0.13.9",
+    "rimraf": "^3.0.2",
     "webpack": "^5.61.0"
   },
   "devDependencies": {
@@ -46,7 +47,6 @@
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
     "path": "^0.12.7",
-    "rimraf": "^3.0.2",
     "webpack-dev-middleware": "^5.2.1",
     "webpack-hot-middleware": "^2.25.1"
   }
