--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "highcharts": "^9.3.2",
     "highcharts-react-official": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^16.12.0",
