--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   ],
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
-    "start": "node --optimize_for_size --max_old_space_size=920 scripts/start.js",
+    "build": "node scripts/build.js",
+    "start": "node scripts/start.js",
     "dev": "node scripts/dev.js",
     "install:clean": "rm -rf node_modules/ && rm -rf dist/ && rm -rf package-lock.json && npm install"
   },
