--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stockmarketpredictions",
-  "version": "1.0.0",
+  "version": "v0.1.0",
   "description": "Stock Market Predictions",
   "main": "scripts/start.js",
   "engines": {
