--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Stock Market Predictions",
   "main": "scripts/start.js",
   "engines": {
-    "node": "14.x"
+    "node": ">=16.3.0"
   },
   "repository": {
     "type": "git"
